--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@ a {
   color: black;
 }
 
+.hide {
+    opacity: .3;
+}
+    
 #modal {
   background: rgba(0, 0, 0, 0.75);
   position: fixed;
@@ -800,7 +804,7 @@ a {
         </a>
         <ul class='menu-sub'>
           <li>
-            <a class='section-link' data-scroll='' href='#v-text'>
+            <a class='section-link hide' data-scroll='' href='#v-text'>
               v-text
             </a>
           </li>
