--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@ a {
             </a>
           </li>
           <li>
-            <a class='section-link' data-scroll='' href='#v-html'>
+            <a class='section-link hide' data-scroll='' href='#v-html'>
               v-html
             </a>
           </li>
@@ -857,7 +857,7 @@ a {
             </a>
           </li>
           <li>
-            <a class='section-link' data-scroll='' href='#v-pre'>
+            <a class='section-link hide' data-scroll='' href='#v-pre'>
               v-pre
             </a>
           </li>
@@ -867,7 +867,7 @@ a {
             </a>
           </li>
           <li>
-            <a class='section-link' data-scroll='' href='#v-once'>
+            <a class='section-link hide' data-scroll='' href='#v-once'>
               v-once
             </a>
           </li>
