--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@ a {
           </li>
         </ul>
       </li>
-      <li class='mouse modifiers'>
+      <li class='mouse modifiers hide'>
         <a>
           Mouse 
           <small>
@@ -1157,7 +1157,7 @@ a {
           </li>
         </ul>
       </li>
-      <li class='keyboard modifiers'>
+      <li class='keyboard modifiers hide'>
         <a>
           Keyboard 
           <small>
